Fix Overlapping of Swipe prompt UI for Relative dates #10 completed

--- a/src/page/Home.css
+++ b/src/page/Home.css
@@ -3,6 +3,7 @@
   flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
+  width: calc(100% - 80px);
 }
 
 #SwipeRightHint {
